--- a/index.html
+++ b/index.html
@@ -1,13 +1,372 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miami</title>
-    <link rel="stylesheet" href="./styles/main.css">
-  </head>
-  <body>
-    <h1>Miami</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
-  </body>
+
+<head>
+  <link
+    rel="shortcut icon"
+    href="./images/favicon.png"
+    type="image/png"
+  >
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Miami</title>
+  <link rel="stylesheet" href="./styles/reset.css">
+  <link rel="stylesheet" href="./styles/main.css">
+</head>
+
+<body>
+  <header class="header" id="header">
+    <div class="container">
+      <div class="header__wrapper">
+        <div class="header__top">
+          <a class="header__phone" href="tel:+12345555555">+1 234 555-55-55</a>
+          <a href="tel:+12345555555" class="header__icon_phone"></a>
+          <a class="header__logo" href="#aboutUs">
+            <img 
+              class="logo"
+              src="./images/logo.png"
+              alt="Miami Logo"
+            >
+          </a>
+          <a class="header__order" href="tel:+12345555555">call to order</a>
+          <div class="header__icon_bars"></div>
+        </div>
+        <h1 class="header__title">
+          Miami</br> Condo Kings
+        </h1>
+        <nav class="nav header__nav">
+          <ul class="nav__list">
+            <li class="nav__item nav__item_active">
+              home
+            </li>
+            <li class="nav__item">
+              <a href="#aboutUs" class="nav__link">about us</a>
+            </li>
+            <li class="nav__item">
+              <a href="#gallery" class="nav__link">gallery</a>
+            </li>
+            <li class="nav__item">
+              <a href="#feedback" class="nav__link">consultation</a>
+            </li>
+            <li class="nav__item">
+              <a href="#team" class="nav__link">testimonials</a>
+            </li>
+            <li class="nav__item">
+              <a href="#contact" class="nav__link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="mobile">
+          <div class="mobile__logo">
+            <img
+              class="mobile__logo_img logo"
+              src="./images/logo.png"
+              alt="Miami Logo"
+            >
+          </div>
+          <div class="mobile__icon"></div>
+          <ul class="mobile__list">
+            <li class="mobile__item">
+              <a href="#" class="mobile__link">home</a>
+            </li>
+            <li class="mobile__item">
+              <a href="#aboutUs" class="mobile__link">about us</a>
+            </li>
+            <li class="mobile__item">
+              <a href="#gallery" class="mobile__link">gallery</a>
+            </li>
+            <li class="mobile__item">
+              <a href="#feedback" class="mobile__link">consultation</a>
+            </li>
+            <li class="mobile__item">
+              <a href="#team" class="mobile__link">testimonials</a>
+            </li>
+            <li class="mobile__item">
+              <a href="#contact" class="mobile__link">Contacts</a>
+            </li>
+          </ul>
+          <div class="mobile__call_link">
+            <a class="mobile__phone" href="tel:+12345555555">+1 234 555-55-55</a>
+          </div>
+          <div class="mobile__call_link">
+            <a class="mobile__order" href="tel:+12345555555">call to order</a>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <section class="aboutUs" id="aboutUs">
+    <div class="container">
+      <div class="aboutUs__wrapper">
+        <h2 class="aboutUs__title">
+          Miami best<br> Real estate
+          <span>here</span>
+        </h2>
+        <div class="content">
+          <h4 class="content__title">
+            Over 50 years experience in love.
+          </h4>
+          <p class="content__text">
+            Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of
+            the
+            early twentieth century, microforms, found a distant historical.
+            <br><br>
+            The market leader in real estate since 2003. Awards Real Estate Company, 2010, 2011, 2013. More than 200
+            satisfied customers premium segment. We focus only on new buildings and high-level doskanalno know this area
+            better than other specialists.<br>Working directly with developers - so have more useful information about
+            the
+            profitable deals.
+            <br><br>
+            <span>
+              We will never be late!<br>Guaranteed secure transaction - 100%
+            </span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+   
+  <section class="gallery" id="gallery">
+    <div class="container">
+      <h2 class="gallery__title section__titles">
+        Gallery
+      </h2>
+      <div class="gallery__wrapper">
+        <div class="photos">
+          <img
+            class="photos__img"
+            src="./images/photos/1.jpg"
+            alt="Marina Palms"
+          >
+          <img
+            class="photos__img"
+            src="./images/photos/2.jpg"
+            alt="Marina Palms"
+          >
+        </div>
+        <p class="photos__text">
+          <a class="photos__link" href="https://goo.gl/maps/ht7W7XJCZyC8sxgg8">Marina Palms</a>
+           / North Miami Beach, FL 33162
+        </p>
+        <div class="photos">
+          <img
+          class="photos__img"
+          src="./images/photos/3.jpg"
+          alt="Edition Residens"
+        >
+          <img
+          class="photos__img"
+          src="./images/photos/4.jpg"
+          alt="Edition Residens"
+        >
+        </div>
+        <p class="photos__text">
+          <a class="photos__link" href="https://goo.gl/maps/EyFqTEe6rDoP3WTc9">Edition Residens</a>
+           / Miami Beach, FL 33139
+        </p>
+        <div class="photos">
+          <img
+            class="photos__img"
+            src="./images/photos/5.jpg"
+            alt="Faena House"
+          >
+          <img
+            class="photos__img"
+            src="./images/photos/6.jpg"
+            alt="Faena House"
+          >
+        </div>
+        <p class="photos__text">
+          <a class="photos__link" href="https://goo.gl/maps/TBUNUnFwnbD2x378A">Faena House</a>
+           / Miami Beach, FL 33140
+        </p>
+      </div>
+      <div class="gallery__btn">
+        <button type="button" class="btn">
+          View all
+        </button>
+      </div>
+    </div>
+  </section>
+  
+  <section class="feedback" id="feedback">
+    <div class="container">
+      <h2 class="feedback__title section__titles">
+        Consultation
+      </h2>
+      <div class="feedback__wrapper">
+        <div class="consultation">
+          <h4 class="consultation__title">
+            How long have you do yourself a gift?
+          </h4>
+          <p class="consultation__text">
+            The procedural change mezzo forte starts izoritmichesky pickup at these moments stop LA Mazel and VA
+            Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of the early
+            twentieth century, microforms, found a distant historical.
+          </p>
+        </div>
+        <div class="form">
+          <input
+            class="form__input"
+            type="text"
+            name="name"
+            placeholder="Name"
+            required
+          >
+          <input
+            class="form__input"
+            type="text"
+            name="phone"
+            placeholder="Phone"
+            required
+          >
+          <input
+            class="form__input"
+            type="text"
+            name="email"
+            placeholder="Email"
+            required
+          >
+          <button class="form__btn" type="button">
+            Consultation
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section class="team" id="team">
+    <div class="container">
+      <h2 class="team__title section__titles">
+        Testimonials
+      </h2>
+      <div class="team__wrapper">
+        <a href="#" class="item">
+          <img
+            src="./images/people/1.png"
+            alt="Ceo Leslie Mckinney"
+            class="item__img"
+          >
+          <h4 class="item__name">
+            Leslie Mckinney
+          </h4>
+          <div class="item__position">
+            CEO
+          </div>
+          <p class="item__comment">
+            Nice work, Certificates National Association of Realtors (USA)
+          </p>
+        </a>
+        <a href="#" class="item">
+          <img
+            src="./images/people/2.png"
+            alt="Senior Vice President Scarlett Hawkins"
+            class="item__img"
+          >
+          <h4 class="item__name">
+            Scarlett Hawkins
+          </h4>
+          <div class="item__position">
+            Senior Vice President
+          </div>
+          <p class="item__comment">
+            My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I enjoy with all my
+            heart
+          </p>
+        </a>
+        <a href="#" class="item">
+          <img
+            src="./images/people/3.png"
+            alt="Ceo Leslie Mckinney"
+            class="item__img"
+          >
+          <h4 class="item__name">
+            Max Henry
+          </h4>
+          <div class="item__position">
+            Chief Design Officer
+          </div>
+          <p class="item__comment">
+            When my lovely valley of steam rises and half-day sun is above an impermeable
+          </p>
+        </a>
+      </div>
+    </div>
+  </section>
+  
+  <section class="contact" id="contact">
+    <div class="container">
+      <h2 class="contact__title section__titles">
+        Contact Us
+      </h2>
+      <div class="contact__wrapper">
+        <div class="contact__item">
+          <div class="contact__phone">
+            <div class="contact__item_name">
+              Phone
+            </div>
+            <a class="contact__link" href="tel:+12345555555">
+              +1 234 555-55-55
+            </a>
+          </div>
+          <div class="contact__email">
+            <div class="contact__item_name">
+              Email
+            </div>
+            <a class="contact__link" href="mailto:hello@miami.com">
+              hello@miami.com
+            </a>
+          </div>
+        </div>
+        <div class="contact__item">
+          <div class="contact__item_name">
+            Address
+          </div>
+          <a class="contact__link" href="https://goo.gl/maps/2Kak5piEiehypi7h6">
+            400 first ave. n. suite 700 Minneapolis, MN 55401
+          </a>
+        </div>
+
+        <div class="form">
+          <input
+            class="form__input"
+            type="text"
+            name="name"
+            placeholder="Name"
+            required
+          >
+          <input
+            class="form__input"
+            type="text"
+            name="email"
+            placeholder="Email"
+            required
+          >
+          <textarea
+            class="form__input contact__textarea"
+            type="text"
+            name="message"
+            placeholder="Message"
+          ></textarea>
+          <button class="form__btn" type="button">
+            Consultation
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <a class="footer__logo" href="#header">
+      <img
+        class="logo"
+        src="./images/logo.png"
+        alt="Miami Logo"
+      >
+    </a>
+  </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="scripts/main.js"></script>
+</body>
+
 </html>
