--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="aboutUs__wrapper">
         <h2 class="aboutUs__title">
           Miami best<br> Real estate
-          <span>here</span>
+          <a href="#" class="aboutUs__title_link">here</a>
         </h2>
         <div class="content">
           <h4 class="content__title">
@@ -129,7 +129,7 @@
    
   <section class="gallery" id="gallery">
     <div class="container">
-      <h2 class="gallery__title section__titles">
+      <h2 class="gallery__title section__title">
         Gallery
       </h2>
       <div class="gallery__wrapper">
@@ -192,7 +192,7 @@
   
   <section class="feedback" id="feedback">
     <div class="container">
-      <h2 class="feedback__title section__titles">
+      <h2 class="feedback__title section__title">
         Consultation
       </h2>
       <div class="feedback__wrapper">
@@ -238,7 +238,7 @@
   
   <section class="team" id="team">
     <div class="container">
-      <h2 class="team__title section__titles">
+      <h2 class="team__title section__title">
         Testimonials
       </h2>
       <div class="team__wrapper">
@@ -297,7 +297,7 @@
   
   <section class="contact" id="contact">
     <div class="container">
-      <h2 class="contact__title section__titles">
+      <h2 class="contact__title section__title">
         Contact Us
       </h2>
       <div class="contact__wrapper">
